# incus-mcp

./: .gitignore  README.md  SPEC.md  dev.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: build.yml
docs/: index.html
scripts/: e2e-env.sh
src/incus_mcp/: __init__.py  __main__.py  client.py  config.py  registry.py  server.py  types.py  wait_registry.py
src/incus_mcp/tools/: __init__.py  admin.py  delete.py  execute.py  groups.py  helpers.py  read.py  write.py
tests/: conftest.py  test_admin_help.py  test_dev.py  test_execute_help.py  test_execute_verify.py  test_integration.py  test_read_help.py  test_types.py  test_unset.py  test_v25_dispatch.py  test_verify.py  test_waiters.py  test_write_help.py  test_write_verify.py
