[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "incus-mcp"
version = "1.0.0"
description = "MCP server for Incus container and VM manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2",
    "pydantic-settings>=2.0",
    "typing-extensions>=4.5",
]
keywords = ["mcp", "incus", "containers", "lxc", "model-context-protocol", "claude", "ai"]

[project.scripts]
incus-mcp = "incus_mcp:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
markers = ["integration: requires a real Incus server"]
addopts = "-m 'not integration'"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# F401/F541 mirror gitlab-mcp: intentional re-exports / lone fixture literals.
ignore = ["F401", "F541"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
